Added image and main title section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 </header>
 <section class="title">
 	<div class="content">
+		<img width="500px" src="images/neilguitar.jpg" alt="Neil Whitford">
 		<h1>Neil Whitford</h1>
+		<h2>Web Developer</h2>
 	</div>
 </section>
 <section class="about">
