added icons and lorem

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	<link href='http://fonts.googleapis.com/css?family=Lato:300|Merriweather|Raleway' rel='stylesheet' type='text/css'>
+	<!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
+	<link href="css/font-awesome.min.css" rel="stylesheet">
 	<title>Neil Whitford</title>
 </head>
 
@@ -16,14 +18,24 @@
 		<img width="500px" src="images/neilguitar.jpg" alt="Neil Whitford">
 		<h1>Neil Whitford</h1>
 		<h2>Web Developer</h2>
+			<ul class="social">
+				<li><a href="http://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
+				<li><i class="fa fa-twitter"></i></li>
+				<li><i class="fa fa-google-plus"></i></li>
+				<li><i class="fa fa-linkedin"></i></li>
+			</ul>
 	</div>
 </section>
 <section class="about">
-	<div class="content"></div>
-	
+	<div class="content">
+		<hr>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias officia sapiente porro quam maiores consectetur ut accusantium iusto beatae, eligendi tempora exercitationem vel tempore quasi qui quae nulla magni dicta.</p>
+	</div>
 </section>
 <section class="projects">
-	<div class="content"></div>
+	<div class="content">
+		
+	</div>
 </section>
 <footer>
 	
