added about and projects sections

--- a/index.html
+++ b/index.html
@@ -29,12 +29,29 @@
 <section class="about">
 	<div class="content">
 		<hr>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias officia sapiente porro quam maiores consectetur ut accusantium iusto beatae, eligendi tempora exercitationem vel tempore quasi qui quae nulla magni dicta.</p>
+		<h3>About Me</h3><br>
+		<p>My name is Neil Whitford, I am web developer, guitarist, music producer and composer.  I live in Toronto, Canada with my girlfriend and my two Australian bearded dragons.</p><br>
+		<a href="http://s.codepen.io/neilwhitford/debug/PwRpbY?"><h4>Find out more about me here!</h4></a>
 	</div>
 </section>
 <section class="projects">
 	<div class="content">
-		
+	<hr>
+		<h3>Projects</h3>
+			<ul class="images">
+				<li>
+					<figure>
+						<img width="300px" src="images/newyorktimes.jpg" alt="Hack the Times Project" margin-right="50px">
+					<figcaption>Hack the New York Times Project</figcaption>
+					</figure>
+				</li>
+				<li>
+					<figure>
+						<a href="http://neilw22.github.io/startup_landing_page/"><img width="300px" src="images/karma_clone.jpg" alt="Karma Clone"></a>
+						<figcaption>Karma Landing Page Clone</figcaption>
+					</figure>
+				</li>
+			</ul>
 	</div>
 </section>
 <footer>
