Added Button and started responsive

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 </header>
 <section class="title">
 	<div class="content">
-		<img width="500px" src="images/neilguitar.jpg" alt="Neil Whitford">
+		<img src="images/neilguitar.jpg" alt="Neil Whitford">
 		<h1>Neil Whitford</h1>
 		<h2>Web Developer</h2>
 			<ul class="social">
-				<li><a href="http://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
-				<li><i class="fa fa-twitter"></i></li>
-				<li><i class="fa fa-google-plus"></i></li>
-				<li><i class="fa fa-linkedin"></i></li>
+				<li><a href="https://www.facebook.com/neil.whitford.58"><i class="fa fa-facebook"></i></a></li>
+				<li><a href="https://twitter.com/whitfordguitar"><i class="fa fa-twitter"></i></a></li>
+				<li><a href="https://plus.google.com/103486129665649841911"><i class="fa fa-google-plus"></i></a></li>
+				<li><a href="http://ca.linkedin.com/pub/neil-whitford/a9/ab9/627"><i class="fa fa-linkedin"></i></a></li>
 			</ul>
 	</div>
 </section>
@@ -31,7 +31,9 @@
 		<hr>
 		<h3>About Me</h3><br>
 		<p>My name is Neil Whitford, I am web developer, guitarist, music producer and composer.  I live in Toronto, Canada with my girlfriend and my two Australian bearded dragons.</p><br>
-		<a href="http://s.codepen.io/neilwhitford/debug/PwRpbY?"><h4>Find out more about me here!</h4></a>
+		<div class="button">
+			<button><a href="http://s.codepen.io/neilwhitford/debug/PwRpbY?"><h4>Find out more about me here!</h4></a></button>
+		</div>
 	</div>
 </section>
 <section class="projects">
