Added responsive and flex box to projects (March 16)

--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
 <section class="title">
 	<div class="content">
 		<img src="images/neilguitar.jpg" alt="Neil Whitford">
-		<h1>Neil Whitford</h1>
-		<h2>Web Developer</h2>
-			<ul class="social">
-				<li><a href="https://www.facebook.com/neil.whitford.58"><i class="fa fa-facebook"></i></a></li>
-				<li><a href="https://twitter.com/whitfordguitar"><i class="fa fa-twitter"></i></a></li>
-				<li><a href="https://plus.google.com/103486129665649841911"><i class="fa fa-google-plus"></i></a></li>
-				<li><a href="http://ca.linkedin.com/pub/neil-whitford/a9/ab9/627"><i class="fa fa-linkedin"></i></a></li>
-			</ul>
+			<div class="content-text">
+				<h1>Neil Whitford</h1>
+				<h2>Web Developer</h2>
+					<ul class="social">
+					<li><a href="https://www.facebook.com/neil.whitford.58"><i class="fa fa-facebook"></i></a></li>
+					<li><a href="https://twitter.com/whitfordguitar"><i class="fa fa-twitter"></i></a></li>
+					<li><a href="https://plus.google.com/103486129665649841911"><i class="fa fa-google-plus"></i></a></li>
+					<li><a href="http://ca.linkedin.com/pub/neil-whitford/a9/ab9/627"><i class="fa fa-linkedin"></i></a></li>
+				</ul>
+			</div>	
 	</div>
 </section>
 <section class="about">
@@ -40,20 +42,22 @@
 	<div class="content">
 	<hr>
 		<h3>Projects</h3>
+			<!-- <div class="project-windows"> -->
 			<ul class="images">
-				<li>
+				<li class="flex-item">
 					<figure>
-						<img width="300px" src="images/newyorktimes.jpg" alt="Hack the Times Project" margin-right="50px">
+						<img src="images/newyorktimes.jpg" alt="Hack the Times Project">
 					<figcaption>Hack the New York Times Project</figcaption>
 					</figure>
 				</li>
-				<li>
+				<li class="flex-item">
 					<figure>
-						<a href="http://neilw22.github.io/startup_landing_page/"><img width="300px" src="images/karma_clone.jpg" alt="Karma Clone"></a>
+						<a href="http://neilw22.github.io/startup_landing_page/"><img src="images/karma_clone.jpg" alt="Karma Clone"></a>
 						<figcaption>Karma Landing Page Clone</figcaption>
 					</figure>
 				</li>
 			</ul>
+			</div>
 	</div>
 </section>
 <footer>
