Coloration, styling March 16

--- a/index.html
+++ b/index.html
@@ -20,39 +20,43 @@
 				<h1>Neil Whitford</h1>
 				<h2>Web Developer</h2>
 					<ul class="social">
-					<li><a href="https://www.facebook.com/neil.whitford.58"><i class="fa fa-facebook"></i></a></li>
-					<li><a href="https://twitter.com/whitfordguitar"><i class="fa fa-twitter"></i></a></li>
-					<li><a href="https://plus.google.com/103486129665649841911"><i class="fa fa-google-plus"></i></a></li>
-					<li><a href="http://ca.linkedin.com/pub/neil-whitford/a9/ab9/627"><i class="fa fa-linkedin"></i></a></li>
+					<a href="https://www.facebook.com/neil.whitford.58"><li><i class="fa fa-facebook"></i></li></a>
+					<a href="https://twitter.com/whitfordguitar"><li><i class="fa fa-twitter"></i></li></a>
+					<a href="https://plus.google.com/103486129665649841911"><li><i class="fa fa-google-plus"></i></li></a>
+					<a href="http://ca.linkedin.com/pub/neil-whitford/a9/ab9/627"><li><i class="fa fa-linkedin"></i></li></a>
 				</ul>
 			</div>	
 	</div>
 </section>
 <section class="about">
+	<hr>
 	<div class="content">
-		<hr>
+		
 		<h3>About Me</h3><br>
 		<p>My name is Neil Whitford, I am web developer, guitarist, music producer and composer.  I live in Toronto, Canada with my girlfriend and my two Australian bearded dragons.</p><br>
 		<div class="button">
-			<button><a href="http://s.codepen.io/neilwhitford/debug/PwRpbY?"><h4>Find out more about me here!</h4></a></button>
+			<a href="http://s.codepen.io/neilwhitford/debug/PwRpbY?"><button><h4>Find Out More About Me</h4></button></a>
 		</div>
 	</div>
 </section>
 <section class="projects">
-	<div class="content">
 	<hr>
+	<div class="content">
+	
 		<h3>Projects</h3>
 			<!-- <div class="project-windows"> -->
 			<ul class="images">
 				<li class="flex-item">
 					<figure>
-						<img src="images/newyorktimes.jpg" alt="Hack the Times Project">
-					<figcaption>Hack the New York Times Project</figcaption>
+						<a href="http://i.imgur.com/byhUdt9.jpg?1">
+							<img src="images/newyorktimes.jpg" alt="Hack the Times Project"></a>
+						<figcaption>Hack the New York Times Project</figcaption>
 					</figure>
 				</li>
 				<li class="flex-item">
 					<figure>
-						<a href="http://neilw22.github.io/startup_landing_page/"><img src="images/karma_clone.jpg" alt="Karma Clone"></a>
+						<a href="http://neilw22.github.io/startup_landing_page/">
+							<img src="images/karma_clone.jpg" alt="Karma Clone"></a>
 						<figcaption>Karma Landing Page Clone</figcaption>
 					</figure>
 				</li>
@@ -60,8 +64,10 @@
 			</div>
 	</div>
 </section>
-<footer>
-	
+<footer class="footer">
+	<div class="content">
+		<a href="mailto:neilw22@gmail.com"><p>Send me an Email!</p></a>
+	</div>
 </footer>
 	
 </body>
