Final coloration, responsive design and tweaks March 16

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 				<h1>Neil Whitford</h1>
 				<h2>Web Developer</h2>
 					<ul class="social">
-					<a href="https://www.facebook.com/neil.whitford.58"><li><i class="fa fa-facebook"></i></li></a>
-					<a href="https://twitter.com/whitfordguitar"><li><i class="fa fa-twitter"></i></li></a>
-					<a href="https://plus.google.com/103486129665649841911"><li><i class="fa fa-google-plus"></i></li></a>
-					<a href="http://ca.linkedin.com/pub/neil-whitford/a9/ab9/627"><li><i class="fa fa-linkedin"></i></li></a>
-				</ul>
+						<a href="https://www.facebook.com/neil.whitford.58"><li id="facebook"><i class="fa fa-facebook"></i></li></a>
+						<a href="https://twitter.com/whitfordguitar"><li id="twitter"><i class="fa fa-twitter"></i></li></a>
+						<a href="https://plus.google.com/103486129665649841911"><li id="google"><i class="fa fa-google-plus"></i></li></a>
+						<a href="http://ca.linkedin.com/pub/neil-whitford/a9/ab9/627"><li id="linkedin"><i class="fa fa-linkedin"></i></li></a>
+					</ul>
 			</div>	
 	</div>
 </section>
@@ -66,7 +66,7 @@
 </section>
 <footer class="footer">
 	<div class="content">
-		<a href="mailto:neilw22@gmail.com"><p>Send me an Email!</p></a>
+		<p><a href="mailto:neilw22@gmail.com">Send me an Email!</a></p>
 	</div>
 </footer>
 	
