--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	<link href='http://fonts.googleapis.com/css?family=Lato:300|Merriweather|Raleway' rel='stylesheet' type='text/css'>
