Renamed Karma img link

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<li class="flex-item">
 					<figure>
 						<a href="http://neilw22.github.io/startup_landing_page/">
-							<img src="images/karma_clone.jpg" alt="Karma Clone"></a>
+							<img src="images/Karma_clone.jpg" alt="Karma Clone"></a>
 						<figcaption>Karma Landing Page Clone</figcaption>
 					</figure>
 				</li>
